--- a/author.html
+++ b/author.html
@@ -9,10 +9,10 @@
 <form>
     <form>
         <label for="author_name">The hidden author name</label>
-        <input type="password" id="author_name" name="author_name" value="Dickens"> <br>
+        <input type="password" id="author_name" name="author_name" value="Dickens"> <br><br>
         <label for="user_guess">Guess the author</label>
-        <input type="text" id="user_guess" name="user_guess"> <br>
-        <input type="button" onclick="checkAuthor()" value="Check the guess">
+        <input type="text" id="user_guess" name="user_guess"> <br><br>
+        <input type="button" onclick="checkAuthor()" value="Check the guess"><br><br>
     </form>
     <p id="result"> Right/Wrong?</p>
     <script>
