--- a/author.html
+++ b/author.html
@@ -6,37 +6,36 @@
  </head>
 <body>
 
+
 <h2>Author entry Pranitha Reddy Policepatel</h2>
 
-<form>
-    <label for="form1_age">What is your age </label>
-    <input type ="number" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
-
-    <label for="form1_nick">What is your nickname </label>
-    <input type ="text" id="form1_nick" name="form1_nick" autofocus> <br>
-
-    <input type="button" onclick="resolveForm()" value="Get values from form">
-</form>
-
-
-<p id="result">This text will be replaced </p>
-
-<script> 
-
-function resolveForm (){
-    console.log("Getting form values")
-    age = document.getElementById("form1_age").value
-    nick = document.getElementById("form1_nick").value
-    confirmed = confirm("Are these the values? "+age+" and "+nick)
-    
-    out = document.getElementById("result")
-    if(confirmed){
-        out.innerHTML = "Values were confirmed"
-    } else {
-        out.innerHTML = "Values were not confirmed"
-    }
-}
-</script>
+    <form>
+        <label for="author_name">The hidden author name</label>
+        <input type="password" id="author_name" name="author_name" value="Dickens"> <br>
+        <label for="user_guess">Guess the author</label>
+        <input type="text" id="user_guess" name="user_guess"> <br>
+        <input type="button" onclick="checkAuthor()" value="Check the guess">
+    </form>
+    <p id="result"> Right/Wrong?</p>
+    <script>
+        let good = 0;
+        let oops = 0;
+        function checkAuthor() {
+            hidden_author_name = document.getElementById("author_name").value
+            user_author_guess = document.getElementById("user_guess").value
+            out = document.getElementById("result")
+            if (hidden_author_name == user_author_guess) {
+                good = good + 1;
+                alert("You got it right");
+                out.innerHTML = `Correct Guess!  good: ${good}`;
+            }
+            else {
+                oops = oops + 1;
+                alert("Sorry");
+                out.innerHTML = `Wrong Guess! oops: ${oops}`;
+            }
+        }
+    </script>
 
 </body>
 </html> 
