--- a/author.html
+++ b/author.html
@@ -17,6 +17,9 @@
         <input type="button" onclick="checkAuthor()" value="Check the guess">
     </form>
     <p id="result"> Right/Wrong?</p>
+    <div>
+         <img src="paris.jpg" alt="Paris" width="100" height="100" onclick="selectImage()"">
+    </div>
     <script>
         let good = 0;
         let oops = 0;
@@ -35,6 +38,27 @@
                 out.innerHTML = `Wrong Guess! oops: ${oops}`;
             }
         }
+
+        let useImage=1;
+        function selectImage() {
+            var imageElement = document.getElementById("imageElement");
+
+            switch (useImage) {
+                case 1:
+                    imageElement.src = "paris.jpg";
+                    useImage = 2;
+                    break;
+                case 2:
+                    imageElement.src = "london.jpg";
+                    useImage = 3;
+                    break;
+                case 3:
+                    imageElement.src = "edinburgh.jpg";
+                    useImage = 1;
+                    break;
+            }
+        }
+
     </script>
 
 </body>
