--- a/author.html
+++ b/author.html
@@ -18,7 +18,7 @@
     </form>
     <p id="result"> Right/Wrong?</p>
     <div>
-         <img src="paris.jpg" alt="Paris" width="100" height="100" onclick="selectImage()"">
+         <img src="paris.jpg" alt="Paris" width="100" height="100" onclick= "selectImage()">
     </div>
     <script>
         let good = 0;
