--- a/author.html
+++ b/author.html
@@ -41,7 +41,7 @@
 
         let useImage=1;
         function selectImage() {
-            var imageElement = document.getElementById("imageElement");
+            let imageElement = document.getElementById("imageElement");
 
             switch (useImage) {
                 case 1:
