--- a/tips.html
+++ b/tips.html
@@ -2,7 +2,7 @@
 <html>
     <head>
        <title>
-       Get started with Tips
+        Tips Title
     </title>
 </head>
 <body>
@@ -15,18 +15,34 @@
 
     <label for="form1_nick">What is your nickname </label>
     <input type ="text" id="form1_nick" name="form1_nick" autofocus> <br>
+
+    <!-- base amount and tip amount operation -->
     <label for="base_amount">Enter base amount </label>
     <input type="number" id="base_amount" name="base_amount" value="50"><br>
 
     <label for="tip_percent">Enter the tip percent </label>
-    <input type="number" id="tip_percent" name="tip_percent" value="15"><br>
-    <input type="button" onclick="resolveForm()" value="Get values from form">
-    <input type="button" onclick="tips()" value="Show tip">
+    <input type="number" id="tip_percent" name="tip_percent" value="15"><br><br>
+     <!-- Add the button for showing result -->
+     <input type="button" onclick="tips()" value="Show tip"><br>
+    <!-- choose operation-->
+    <label for="operation">Choose Operation: </label><br>
+    <input type="radio" id="sum" name="operation" value="sum" onclick="chooseOp()"> 
+    <label for="sum">Sum</label><br>
+    <input type="radio" id="difference" name="operation" value="difference" onclick="chooseOp()"> 
+    <label for="difference">Difference</label><br>
+    <input type="radio" id="product" name="operation" value="product" onclick="chooseOp()">
+    <label for="product">Product</label><br>
+
+     
 </form>
 
 
 <p id="result">This text will be replaced </p>
-<p id="tipsResults">This text will be tipsResults </p>
+<!--Add a <p> to display the tipresults -->
+<p id="tipsResults"> </p>
+<!-- Add a <p> to display the results -->
+<p id="calculationResult"></p>
+
 <script> 
 
 function resolveForm (){
@@ -42,7 +58,7 @@ function resolveForm (){
         out.innerHTML = "Values were not confirmed"
     }
 }
-
+//tips function
 function tips() {
     let baseAmount = document.getElementById("base_amount").value;
     let tipPercent = document.getElementById("tip_percent").value;
@@ -50,12 +66,38 @@ function tips() {
 
     for (let i = 0; i < 5; i++) {
         let calculatedTip = parseFloat(baseAmount) * (parseFloat(tipPercent) + i * 4) / 100;
-        myOutput += (tipPercent + i * 4) + "% is calculated tip: $" + calculatedTip.toFixed(2) + "; ";
+        myOutput += (tipPercent + i * 4) + "% is calculated tip: $" + calculatedTip.toFixed(2) + "; "+"\n";
     }
 
-    let tipResultsElement = document.getElementById("tipResults");
+    let tipResultsElement = document.getElementById("tipsResults");
     tipResultsElement.innerHTML = "Tips are: " + myOutput;
 }
+//chooseoption function
+function chooseOp() {
+        let baseAmount = parseFloat(document.getElementById("base_amount").value);
+        let tipPercent = parseFloat(document.getElementById("tip_percent").value);
+        let selectedOperation = document.querySelector('input[name="operation"]:checked').value;
+
+        let resultText = "";
+
+        switch (selectedOperation) {
+            case "sum":
+                resultText = "Sum of " + baseAmount + " and " + tipPercent + " is " + (baseAmount + tipPercent);
+                break;
+            case "difference":
+                resultText = "Difference between " + baseAmount + " and " + tipPercent + " is " + (baseAmount - tipPercent);
+                break;
+            case "product":
+                resultText = "Product of " + baseAmount + " and " + tipPercent + " is " + (baseAmount * tipPercent);
+                break;
+            default:
+                resultText = "Select an operation";
+        }
+
+        var calculationResultElement = document.getElementById("calculationResult");
+        calculationResultElement.innerHTML = resultText;
+    }
+
 </script>
 
 </body>
