--- a/tips.html
+++ b/tips.html
@@ -36,10 +36,19 @@
      
 </form>
 
-
-<p id="result">This text will be replaced </p>
 <!--Add a <p> to display the tipresults -->
 <p id="tipsResults"> </p>
+<form>
+    <!-- choose operation-->
+    <label for="operation">Choose Operation: </label><br>
+    <input type="radio" id="sum" name="operation" value="sum" onclick="chooseOp()"> 
+    <label for="sum">Sum</label><br>
+    <input type="radio" id="difference" name="operation" value="difference" onclick="chooseOp()"> 
+    <label for="difference">Difference</label><br>
+    <input type="radio" id="product" name="operation" value="product" onclick="chooseOp()">
+    <label for="product">Product</label><br>
+
+</form>
 <!-- Add a <p> to display the results -->
 <p id="calculationResult"></p>
 
