--- a/tips.html
+++ b/tips.html
@@ -8,7 +8,20 @@
 <body>
 
 <h2>Pranitha Reddy Policepatel shows tip amounts</h2>
+<style>
+            h2 {
+                color: #333; /* Text color */
+                font-size: 24px; /* Font size */
+                font-weight: bold; /* Bold text */
+                text-align: center; /* Center text */
+            }
 
+            h4 {
+                color: #555; /* Text color */
+                font-size: 18px; /* Font size */
+                font-weight: normal; /* Normal text */
+            }
+        </style>
 <form>
     <label for="form1_age">What is your age </label>
     <input type ="number" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
