--- a/tips.html
+++ b/tips.html
@@ -8,14 +8,14 @@
 <body>
 <style>
             h2 {
-                color: #333; /* Text color */
+                color: #e80404; /* Text color */
                 font-size: 24px; /* Font size */
                 font-weight: bold; /* Bold text */
                 text-align: center; /* Center text */
             }
 
             h4 {
-                color: #555; /* Text color */
+                color: #30e21d; /* Text color */
                 font-size: 18px; /* Font size */
                 font-weight: normal; /* Normal text */
             }
