--- a/tips.html
+++ b/tips.html
@@ -19,6 +19,9 @@
                 font-size: 18px; /* Font size */
                 font-weight: normal; /* Normal text */
             }
+            input[type="button"]:hover {
+             background-color: #0056b3;
+         }
         </style>
 <h2>Pranitha Reddy Policepatel shows tip amounts</h2>
  
@@ -36,7 +39,7 @@
     <label for="tip_percent">Enter the tip percent </label>
     <input type="number" id="tip_percent" name="tip_percent" value="15"><br><br>
      <!-- Add the button for showing result -->
-     <input type="button" onclick="tips()" value="Show tip"><br>
+     <input type="button" onclick="tips()" value="Show tip" style="background-color: #007BFF; color: #fff; font-size: 16px; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px;"><br>
      
 </form>
 
