--- a/tips.html
+++ b/tips.html
@@ -22,6 +22,12 @@
             input[type="button"]:hover {
              background-color: #0056b3;
          }
+         #calculationResult {
+        color: #333; /* Text color */
+        font-size: 18px; /* Font size */
+        font-weight: bold; /* Bold text */
+        margin-top: 20px; /* Top margin to separate it from other elements */
+    }
         </style>
 <h2>Pranitha Reddy Policepatel shows tip amounts</h2>
  
