--- a/cruise.html
+++ b/cruise.html
@@ -29,7 +29,7 @@
     </div><br>
     <div class="form-group"> 
     <label for="pool">Pool Pass</label>
-    <input type="checkbox" id="pool" value="False">
+    <input type="checkbox" id="pool" value="False"><br>
     
     <!-- Add a button to select a cruise -->
     <input type="button" onclick="selectCruise()" value="Select a cruise"><br>
